--- a/css/grid.css
+++ b/css/grid.css
@@ -67,7 +67,7 @@ a {
 
 h1 {
     font-size: 2.2em;
-     font-family: FOT-ラグランパンチ Std UB ,'RaglanPunchStd-UB';
+     font-family: 'Montserrat', sans-serif;
       margin: 0;
       padding: 0 0 2em;
 }
